src/popup/popup.css
:root {
    --color-black: #000;
    --color-white: #fff;
    --color-grey-lighter: #eee;
    --color-grey: #aaa;
    --color-brand: #03a87c;
    --color-brand-darker: #019b72;
}

html {
    padding: 0;
    margin: 0;
}

body {
    color: var(--color-black);
    width: 450px;
    padding: 0;
    margin: 0;
    font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
}

section {
    max-height: 336px;
    padding: 20px 20px 0 20px;
    overflow: hidden;
}

h1 {
    position: relative;
    margin: -15px 0 20px 0;
    font-size: 16px;
    color: var(--color-brand);
}

h1 span {
    color: var(--color-grey);
}

h1 .welcome {
    float: right;
    font-weight: normal;
    font-size: 14px;
}

h1 .welcome .user {
    color: var(--color-black);
    cursor: pointer;
}

h1 .welcome .user-avatar {
    border-radius: 50%;
    height: 32px;
    top: 11px;
    cursor: pointer;
    margin: 0 0 0 5px;
}

h1 .welcome .user-selector div {
    cursor: pointer;
}

h1 img {
    height: 32px;
    display: inline-block;
    position: relative;
    top: 7px;
}

h1 .user-selector {
    position: absolute;
    top: 60px;
    right: -10px;
    padding: 10px 20px;
    text-align: right;
    background-color: var(--color-white);
    border: 1px solid var(--color-grey-lighter);
    border-radius: 3px;
    box-shadow: 0 1px 2px rgba(0,0,0,.25), 0 0 1px rgba(0,0,0,.35);
    display: none;
}

h1 .user-selector:after {
    position: absolute;
    top: -15px;
    right: 18px;
    box-shadow: rgba(0, 0, 0, 0.54) -1px -1px 1px -1px;
    transform: rotate(45deg) translate(6px, 6px);
    background: rgb(255, 255, 255);
    height: 14px;
    width: 14px;
    display: block;
    content: "";
    z-index: 0;
}

h1 .user-selector .option {
    height: 54px;
}

a {
    color: var(--color-brand);
    text-decoration: none;
}

a:hover {
    color: var(--color-brand-darker);
}

.actions {
    display: flex;
    align-items: center;
    margin: 0 0 20px 0;
    position: relative;
}

.actions .open-stats {
    flex: 1 1 auto;
    margin: 0 10px 0 0;
}

.actions .refresh-stats {
    flex: 1 1 auto;
    margin: 0 0 0 10px;
}

.actions .confetti {
    position:absolute;
    bottom: 0;
    left: 50%;
    width: 10px;
    height: 10px;
    margin: 0 0 0 -5px;
}

.actions .milestone-reached-value {
    position:absolute;
    top: 50%;
    left: 50%;
    width: 100px;
    height: 30px;
    margin: -30px 0 0 -50px;
    display: none;
    color: var(--color-brand);
    font-family: sans-serif;
    font-size: 28px;
    font-weight: bold;
    text-align: center;
}

.actions .milestone-reached-value .value {
    top: -2px;
}

.actions .milestone-reached-value .description {
    display: inline-block;
    font-size: 13px;
    line-height: 15px;
}

.actions .milestone-reached-value-explode {
    animation: shake 1s cubic-bezier(.36,.07,.19,.97) 1;
    transform: translate3d(0, 0, 0);
    backface-visibility: hidden;
    perspective: 100px;
}

@keyframes shake {
    10%, 90% { transform: translate3d(-1px, -2px, -2px); }
    20%, 80% { transform: translate3d(2px, -4px, 1px); }
    30%, 50%, 70% { transform: translate3d(-4px, 2px, -1px); }
    40%, 60% { transform: translate3d(4px, 3px, 3px); }
}

button {
    height: 36px;
    border: 0;
    padding: 10px;
    color: var(--color-white);
    background-color: var(--color-brand);
    border-radius: 4px;
}

button:hover {
    background-color: var(--color-brand-darker);
}

button:focus {
    outline: 0;
}

button.outline {
    color: var(--color-brand);
    border: 1px solid var(--color-brand);
    background-color: var(--color-white);
}

button.outline:hover {
    border: 1px solid var(--color-brand-darker);
    background-color: var(--color-white);
}

.refresh-stats:hover  > * {
    animation: refresh-spin-hover 0.5s linear 1;
}

.refresh-stats:focus  > * {
    animation: refresh-spin-click 1s ease-in-out 1;
}

@keyframes refresh-spin-hover { 100% { transform: rotate(180deg); } }
@keyframes refresh-spin-click { 100% { transform: rotate(720deg); } }

.chart {
    flex: 15 1 auto;
    margin: 10px auto;
    max-width: 80%;
    max-height: 150px;
}

.chart .circle-bg {
    fill: none;
    stroke: var(--color-grey-lighter);
    stroke-width: 2;
}

.chart .circle {
    fill: none;
    stroke-width: 2;
    stroke-linecap: round;
}

.chart .progress {
    stroke: var(--color-brand);
    animation: chart-progress 1.5s ease-in-out forwards;
}

.chart .spinner {
    display: none;
    stroke: var(--color-grey);
    stroke-dasharray: 10, 100;
    stroke-dashoffset: 0;
    transform-origin: center;
    animation:
            chart-spinner 3s ease-in-out infinite,
            chart-spinner-rotate 3s linear infinite;
}

@keyframes chart-spinner-rotate {
    100% {
        transform: rotate(396deg);

    }
}

@keyframes chart-spinner {
    0% {
        stroke-dasharray: 10, 100;
        stroke-dashoffset: 0;
    }
    50% {
        stroke-dasharray: 70, 100;
        stroke-dashoffset: -20;
    }
    100% {
        stroke-dasharray: 10, 100;
        stroke-dashoffset: -90;
    }
}

@keyframes chart-progress {
    0% {
        stroke-dasharray: 0, 100;
    }
}

.chart .label {
    fill: var(--color-grey);
    font-family: sans-serif;
    font-size: 0.18em;
    text-anchor: middle;
}

.chart .reach {
    fill: var(--color-brand);
    font-family: sans-serif;
    font-size: 0.5em;
    font-weight: bold;
    text-anchor: middle;
}

.chart .milestone {
    fill: var(--color-black);
    font-family: sans-serif;
    font-size: 0.25em;
    text-anchor: middle;
}

table {
    width: 100%;
    margin: 0 0 20px 0;
    border-collapse: collapse;
}

table th,
table td {
    text-align: right;
    padding: 5px;
}

table th:first-child,
table td:first-child {
    text-align: left;
}

table th {
    border-bottom: 2px solid;
}

.articles td {
    padding: 10px 5px 5px 5px;
}

footer {
    border-top: 1px solid var(--color-grey-lighter);
    text-align: center;
    padding: 5px 0 15px 0;
    color:  var(--color-grey);
    position: relative;
}

footer a img {
    height: 24px;
    position: relative;
    top: 8px;
    left: 5px;
}

footer .version {
    position: absolute;
    right: 20px;
    top:16px;
}

.loading h1 .user-selector,
.loading table,
.loading .chart-label,
.loading .chart .progress,
.loading .welcome {
    display: none;
}

.loading .chart .spinner {
    display: block;
}

.milestone-reached .chart-label {
    display: none;
}

.milestone-reached .milestone-reached-value {
    display: block;
}

